# search

./: .gitignore  README.md  pyproject.toml  runner.py
resources/: kdtree.pkl  restaurants_paris_cleansed.json
search/logging/: logs.py
search/process/: process.py
search/processes/: search_process.py
search/utils/: common.py  fs.py
test/: test_runner.py  test_search.py
test/processes/: test_search.py
test/utils/: test_common.py
utils/: common.py
