[tool.poetry]
name = "search_stations"
version = "0.0.1"
description = "Search stations"
authors = ["Philippe Paulos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
haversine = "==2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.3.1"


[build-system]
build-backend = "poetry.core.masonry.api"