[tool.poetry]
name = "search"
version = "0.0.1"
description = "Search for places around"
authors = ["Philippe Paulos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
haversine = "==2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.3.1"


[build-system]
build-backend = "poetry.core.masonry.api"